add content of sp.

--- a/src/content/blog/ntu-csie-sophomore-1/index.mdx
+++ b/src/content/blog/ntu-csie-sophomore-1/index.mdx
@@ -8,7 +8,11 @@ tags:
   - "CSIE"
 language: "zh-TW"
 comment: true
+draft: true
 ---
+import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse } from 'astro-pure/user'
+
+
 ## 前言
 
 這學期本來只是想輕鬆點，因為我接了各種奇怪的事情，包括但不限於
@@ -20,8 +24,6 @@ comment: true
 - 微積分 TA
 
 這學期過下去發現自己還是個分奴，分數真的對我的心情影響巨大，希望我可以克服吧～
-
-<!-- more -->
 
 ## 修課目錄
 
@@ -63,3 +65,5 @@ comment: true
 ---
 
 我差不多要死了
+
+自動機適合大一修 因為 P NP
