--- a/src/content/blog/ntu-sp-note/index.mdx
+++ b/src/content/blog/ntu-sp-note/index.mdx
@@ -33,7 +33,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 1.  **OS Concept**
     <Card
       as='a'
-      href='ntu-sp-ch01-oscon'
+      href='../ntu-sp-ch01-oscon'
       heading='Ch1. OS Concept'
       subheading='NTU PJ System Programming: Ch1 OS concept'
       date='Sep 2025'
@@ -44,7 +44,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 2.  **Unbuffered I/O**
     <Card
       as='a'
-      href='ntu-sp-ch02-unbufio'
+      href='../ntu-sp-ch02-unbufio'
       heading='Ch2. Unbuffered I/O'
       subheading='NTU PJ System Programming: Ch2 Unbuffered I/O'
       date='Sep 2025'
@@ -55,7 +55,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 3.  **Advanced I/O**
     <Card
       as='a'
-      href='ntu-sp-ch03-advio'
+      href='../ntu-sp-ch03-advio'
       heading='Ch3. Advanced I/O'
       subheading='NTU PJ System Programming: Ch3 Advanced I/O'
       date='Sep 2025'
@@ -66,7 +66,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 4. **Buffered I/O**
     <Card
       as='a'
-      href='ntu-sp-ch04-bufio'
+      href='../ntu-sp-ch04-bufio'
       heading='Ch4. Buffered I/O'
       subheading='NTU PJ System Programming: Ch4 Buffered I/O'
       date='Sep 2025'
@@ -77,7 +77,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 5. **File and Directory**
     <Card
       as='a'
-      href='ntu-sp-ch05-file'
+      href='../ntu-sp-ch05-file'
       heading='Ch5. File and Directory'
       subheading='NTU PJ System Programming: Ch5 File and Directory'
       date='Sep 2025'
@@ -88,7 +88,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 6. **Process and IPC**
     <Card
       as='a'
-      href='ntu-sp-ch06-process'
+      href='../ntu-sp-ch06-process'
       heading='Ch6. Process and IPC'
       subheading='NTU PJ System Programming: Ch6 Process and IPC'
       date='Sep 2025'
@@ -99,7 +99,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 7. **Signals**
     <Card
       as='a'
-      href='ntu-sp-ch07-signal'
+      href='../ntu-sp-ch07-signal'
       heading='Ch7. Signals'
       subheading='NTU PJ System Programming: Ch7 Signals'
       date='Sep 2025'
@@ -110,7 +110,7 @@ import { LinkPreview } from 'astro-pure/advanced'
 8. **Threads**
     <Card
       as='a'
-      href='ntu-sp-ch08-thread'
+      href='../ntu-sp-ch08-thread'
       heading='Ch8. Threads'
       subheading='NTU PJ System Programming: Ch8 Threads'
       date='Sep 2025'
