--- a/src/content/blog/ntu-sp-ch02-unbufIO/index.mdx
+++ b/src/content/blog/ntu-sp-ch02-unbufIO/index.mdx
@@ -389,3 +389,17 @@ int main(void) {
 ![截圖 2025-10-17 上午10.39.41](https://hackmd.io/_uploads/Hye9dh7kCgl.png)
 - 這次把 `write()` 真正做出來
 - `O_SYNC` 會導致 DISK I/O 大量增加 clock time 會大幅增加
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
