--- a/src/content/blog/ntu-sp-ch03-advIO/index.mdx
+++ b/src/content/blog/ntu-sp-ch03-advIO/index.mdx
@@ -184,3 +184,17 @@ close(fd2);
 
 **Socket Programming**
 ![截圖 2025-09-25 中午12.08.17](https://hackmd.io/_uploads/ByAVeSG2ll.png)
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
