--- a/src/content/blog/ntu-sp-ch04-bufIO/index.mdx
+++ b/src/content/blog/ntu-sp-ch04-bufIO/index.mdx
@@ -237,3 +237,17 @@ Overflow is possible for sprintf() –
     - single byte character 
     - multiple byte character
 - 一但被 set 就不能 reset
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
