--- a/src/content/blog/ntu-sp-ch05-file/index.mdx
+++ b/src/content/blog/ntu-sp-ch05-file/index.mdx
@@ -355,3 +355,18 @@ import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse 
       ```
       並沒有真正改到 cwd，因為 follow hard/soft link 的區別
       </Aside>
+
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
