--- a/src/content/blog/ntu-sp-ch06-process/index.mdx
+++ b/src/content/blog/ntu-sp-ch06-process/index.mdx
@@ -705,3 +705,18 @@ static void charatatime(char *str) {
 ![截圖 2025-10-26 晚上9.17.26](https://hackmd.io/_uploads/SJ-uJjo0gx.png)
 - open well-known FIFO for `R`, `W` 變成
 </Aside>
+
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
