--- a/src/content/blog/ntu-sp-ch07-signal/index.mdx
+++ b/src/content/blog/ntu-sp-ch07-signal/index.mdx
@@ -1247,3 +1247,17 @@ abort(void)          /* POSIX-style abort() function */
 - 然後把執行完後把東西再次設定為 default 然後才能送出第二次 `kill()`
 - `exit()` 是保險
 </Aside>
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
