--- a/src/content/blog/ntu-sp-ch08-thread/index.mdx
+++ b/src/content/blog/ntu-sp-ch08-thread/index.mdx
@@ -546,3 +546,17 @@ int getcount(int *countp) {
 ```
 - 要上 lock
 </Aside>
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
