--- a/src/content/blog/ntu-sp-ch01-OScon/index.mdx
+++ b/src/content/blog/ntu-sp-ch01-OScon/index.mdx
@@ -195,3 +195,17 @@ chmod g+rw file.txt
 ```
 
 ```chmod```,```chown```,```touch```
+
+---
+
+<Card
+  as='a'
+  href='../ntu-sp-note'
+  heading='Back to the content'
+  subheading='NTU PJ System Programming'
+  date='2025 Fall'
+>
+  ← Back to the content
+</Card>
+
+---
