--- a/src/content/blog/ntu-sp-ch08-thread/index.mdx
+++ b/src/content/blog/ntu-sp-ch08-thread/index.mdx
@@ -10,6 +10,7 @@ tags:
 language: "zh-TW"
 comment: true
 heroImage: { src: './back.png', color: '#dd9994ff' }
+draft: true
 ---
 import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse } from 'astro-pure/user'
 
