--- a/src/content/blog/ntu-csie-sophomore-1/index.mdx
+++ b/src/content/blog/ntu-csie-sophomore-1/index.mdx
@@ -8,7 +8,7 @@ tags:
   - "CSIE"
 language: "zh-TW"
 comment: true
-draft: false
+draft: true
 ---
 import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse } from 'astro-pure/user'
 
@@ -99,6 +99,48 @@ import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse 
 
 </div>
 
+這裡附上一份線性代數的筆記 PDF，給有需要的同學參考～
+
+<a href="/pdf/LinearAlgebra.pdf" class="group relative block h-80 w-full overflow-hidden rounded-2xl bg-gray-900 border border-gray-800 shadow-xl transition-all duration-500 hover:shadow-2xl hover:shadow-blue-500/10 hover:border-blue-500/30">
+  
+  <div class="absolute inset-0 h-full w-full transition-transform duration-700 group-hover:scale-110">
+    <img 
+      src="/images/LinearAlgebra.png" 
+      alt="Cover"
+      class="h-full w-full object-cover opacity-50 blur-[3px] scale-[1.03] transition-all duration-500 group-hover:opacity-30 group-hover:blur-md"
+    />
+  </div>
+
+  <div class="absolute inset-0 bg-gradient-to-t from-gray-950 via-gray-900/60 to-black/10"></div>
+
+  <div class="absolute inset-0 flex flex-col p-7 z-10">
+    
+    <div>
+      <h3 class="text-3xl font-extrabold text-white drop-shadow-[0_2px_2px_rgba(0,0,0,0.8)] transition-colors group-hover:text-blue-100">
+        Linear Algebra
+      </h3>
+      
+      <br/>
+
+      <p class="mt-4 font-medium text-gray-100 drop-shadow-sm tracking-wide">
+        線性代數 李明穗 教授
+      </p>
+    </div>
+
+    <div class="flex-grow"></div>
+
+    <div>
+      <button class="flex w-fit items-center gap-2 rounded-xl bg-blue-600 px-6 py-3.5 text-base font-bold text-white shadow-lg shadow-blue-900/40 transition-all duration-300 hover:bg-blue-500 hover:scale-105 hover:shadow-blue-500/50 active:scale-95">
+        <span>Read PDF</span>
+        <svg class="h-5 w-5 transition-transform duration-300 group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+        </svg>
+      </button>
+    </div>
+
+  </div>
+</a>
+
 ### 系統程式設計
 
 <div class="course-info-card">
@@ -128,17 +170,47 @@ import { Card, Aside, Timeline, Steps, Button, Spoiler, FormattedDate, Collapse 
 
 </div>
 
-這裡附上一份自動機與形式語言的筆記 PDF，給有需要的同學參考～
+這裡附上一份自動機筆記 PDF，給有需要的同學參考～
 
-<Card
-  as='a'
-  href='/pdfs/IntroComputation.pdf'
-  heading='Introduction to Computation Theory'
-  subheading='NTU CSIE 3110'
-  date='Sep 2025'
->
-  The Concept of Operating System (OS), including user mode vs kernel mode, system calls, and resource management.
-</Card>
+<a href="/pdf/IntroComputation.pdf" class="group relative block h-80 w-full overflow-hidden rounded-2xl bg-gray-900 border border-gray-800 shadow-xl transition-all duration-500 hover:shadow-2xl hover:shadow-blue-500/10 hover:border-blue-500/30">
+  
+  <div class="absolute inset-0 h-full w-full transition-transform duration-700 group-hover:scale-110">
+    <img 
+      src="/images/IntroComputation.png" 
+      alt="Cover"
+      class="h-full w-full object-cover opacity-50 blur-[3px] scale-[1.03] transition-all duration-500 group-hover:opacity-30 group-hover:blur-md"
+    />
+  </div>
+
+  <div class="absolute inset-0 bg-gradient-to-t from-gray-950 via-gray-900/60 to-black/10"></div>
+
+  <div class="absolute inset-0 flex flex-col p-7 z-10">
+    
+    <div>
+      <h3 class="text-3xl font-extrabold text-white drop-shadow-[0_2px_2px_rgba(0,0,0,0.8)] transition-colors group-hover:text-blue-100">
+        Introduction to Computation Theory
+      </h3>
+      
+      <br/>
+
+      <p class="mt-4 font-medium text-gray-100 drop-shadow-sm tracking-wide">
+        自動機與形式語言 林智仁 教授
+      </p>
+    </div>
+
+    <div class="flex-grow"></div>
+
+    <div>
+      <button class="flex w-fit items-center gap-2 rounded-xl bg-blue-600 px-6 py-3.5 text-base font-bold text-white shadow-lg shadow-blue-900/40 transition-all duration-300 hover:bg-blue-500 hover:scale-105 hover:shadow-blue-500/50 active:scale-95">
+        <span>Read PDF</span>
+        <svg class="h-5 w-5 transition-transform duration-300 group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+        </svg>
+      </button>
+    </div>
+
+  </div>
+</a>
 
 ### 計算機網路
 
